cmake_minimum_required(VERSION 3.17)
project(Yandex_belts)


set(CMAKE_CXX_STANDARD 20)

add_executable(Yandex_belts
        "Red belt/first_week/MACROS/bad_macro/print_values.cpp"
        "Red belt/first_week/MACROS/bad_macro/test_runner.h"
        "Red belt/first_week/MACROS/bad_macro/test_runner.cpp"
        "Red belt/first_week/MACROS/bad_macro/profile.h"
        "Red belt/first_week/MACROS/bad_macro/profile.cpp"
        )

                         