cmake_minimum_required(VERSION 3.17)
project(Yandex_belts)


set(CMAKE_CXX_STANDARD 20)

add_executable(Yandex_belts
        "Red belt/first_week/CLASS_TEMPLATES/paginator/main.cpp"
        "Red belt/first_week/CLASS_TEMPLATES/paginator/profile.h"
        "Red belt/first_week/CLASS_TEMPLATES/paginator/profile.cpp"
        "Red belt/first_week/CLASS_TEMPLATES/paginator/test_runner.h"
        "Red belt/first_week/CLASS_TEMPLATES/paginator/test_runner.cpp"
        )

                         