cmake_minimum_required(VERSION 3.17)
project(Yandex_belts)


set(CMAKE_CXX_STANDARD 20)

add_executable(Yandex_belts
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/main.cpp"
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/student.h"
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/profile.h"
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/test_runner.h"
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/test_runner.cpp"
        "Red belt/second_week/CODE_OPTIMIZATION_PRINCIPLES/sort_students_by_rating/profile.cpp"
        )

                         